# mocup

./: .gitignore  .rosinstall  setup.sh
meteron_mocup/: stack.xml
meteron_mocup/mocup_arduino/: mainpage.dox  manifest.xml
meteron_mocup/mocup_arduino/doc/: pinout_megashield_atmega.xls
meteron_mocup/mocup_arduino/launch/: arduino.launch  driver.launch
meteron_mocup/mocup_arduino/src/: src.ino
meteron_mocup/mocup_bringup/: mainpage.dox  manifest.xml
meteron_mocup/mocup_bringup/launch/: mocup_bringup.launch  robot.launch  smart.launch
meteron_mocup/mocup_camera/: mainpage.dox  manifest.xml
meteron_mocup/mocup_camera_controller/: mainpage.dox  manifest.xml
meteron_mocup/mocup_camera_controller/launch/: controller.launch
meteron_mocup/mocup_camera_controller/src/: CMakeLists.txt  controller.cpp
meteron_mocup/mocup_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
meteron_mocup/mocup_controller/launch/: controller.launch  (+2 more)
meteron_mocup/mocup_description/: mainpage.dox  manifest.xml
meteron_mocup/mocup_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
meteron_mocup/mocup_gazebo/: mainpage.dox  manifest.xml
meteron_mocup/mocup_gazebo_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml
meteron_mocup/mocup_gazebo_plugins/include/mocup_gazebo_plugins/: all_wheel_steering_plugin.h
meteron_mocup/mocup_gazebo_plugins/src/: all_wheel_steering_plugin.cpp
meteron_mocup/mocup_joystick/: mainpage.dox  manifest.xml
meteron_mocup/mocup_launch/: mainpage.dox  manifest.xml
meteron_mocup/mocup_msgs/: mainpage.dox  manifest.xml
(+104 files in other folders)
